utopia-project/force-app/main/default/objects/Feature_Availability__mdt/Feature_Availability__mdt.object-meta.xml
<CustomObject>
    <label>Feature Availability</label>
    <pluralLabel>Feature Availabilities</pluralLabel>
</CustomObject>