utopia-project/force-app/main/default/objects/Feature_Availability__mdt/fields/Add_On_Name__c.field-meta.xml
<CustomField>
    <fullName>Add_On_Name__c</fullName>
    <label>Add-On Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>