utopia-project/force-app/main/default/objects/Feature_Availability__mdt/fields/Feature__c.field-meta.xml
<CustomField>
    <fullName>Feature__c</fullName>
    <label>Feature</label>
    <length>255</length>
    <type>Text</type>
</CustomField>