utopia-project/force-app/main/default/objects/Feature_Availability__mdt/fields/Included_In_Base__c.field-meta.xml
<CustomField>
    <fullName>Included_In_Base__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Included In Base</label>
    <type>Checkbox</type>
</CustomField>