utopia-project/force-app/main/default/objects/Feature_Availability__mdt/fields/Limitations__c.field-meta.xml
<CustomField>
    <fullName>Limitations__c</fullName>
    <label>Limitations</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>