utopia-project/force-app/main/default/objects/Feature_Availability__mdt/fields/Pricing_Note__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Note__c</fullName>
    <label>Pricing Note</label>
    <length>255</length>
    <type>Text</type>
</CustomField>